--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
  
 
-  <title>Title holis</title>  
+  <title>Lab2</title>  
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
+<script src="https://kit.fontawesome.com/64f7bbb130.js" crossorigin="anonymous"></script>
 
 <body>
 
@@ -88,7 +89,7 @@
 
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa-regular fa-hand fa-3x" aria-hidden="true"></i> 
                     </div>
                     <div class="text-center">
                         <h3>Necesidad</h3>
@@ -100,7 +101,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-regular fa-user fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Usuario</h3>
@@ -112,7 +113,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-regular fa-pen-to-square fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Funcionalidad</h3>
@@ -148,7 +149,6 @@
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
                     </div>
 
@@ -171,7 +171,7 @@
 
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa-regular fa-hand fa-3x" aria-hidden="true"></i> 
                     </div>
                     <div class="text-center">
                         <h3>Necesidad</h3>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-regular fa-user fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Usuario</h3>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-regular fa-pen-to-square fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Funcionalidad</h3>
@@ -230,7 +230,6 @@
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
                     </div>
 
@@ -253,7 +252,7 @@
 
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa-regular fa-hand fa-3x" aria-hidden="true"></i> 
                     </div>
                     <div class="text-center">
                         <h3>Necesidad</h3>
@@ -264,7 +263,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-regular fa-user fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Usuario</h3>
@@ -276,7 +275,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
+                        <i class="fa fa-regular fa-pen-to-square fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Funcionalidad</h3>
@@ -307,8 +306,6 @@
                         </div>
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
                     </div>
 
@@ -317,9 +314,6 @@
             </div>
     </div>
 </div>
-
-
-
 
 
 
