--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <div class="row">
                 <div class="col-md-12 section-container-spacer">
                     <div class="text-center">
-                        <h2>1- CARRO DESPERTADOR</h2>
+                        <h2>1-CARRO DESPERTADOR</h2>
+                        <h3><b>IDEA ELEGIDA </b></h3>
                         <p> Función de alarma interactiva con sensor de movimiento, audio y programación horaria. </p>
                     </div>
                 </div>
