--- a/download.html
+++ b/download.html
@@ -43,7 +43,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./about.html" title=""> Materiales</a></li>
-          <li><a href="./pricing.html" title=""> Pricing </a></li>
+          <li><a href="./pricing.html" title=""> Diseño</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
           <li><a href="./components.html" title="">Components</a></li>
           <li>
