--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="./about.html" title=""> Materiales</a></li>
           <li><a href="./pricing.html" title=""> Diseño </a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li>
+          <li><a href="./components.html" title="">Misiones</a></li>
           <li>
             <p>
               <a href="./download.html" class="btn btn-primary navbar-btn" title="">Integrantes</a>
