--- a/pricing.html
+++ b/pricing.html
@@ -45,7 +45,7 @@
           <li><a href="./about.html" title=""> Materiales</a></li>
           <li><a href="./pricing.html" title=""> Diseño </a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li>
+          <li><a href="./components.html" title="">Misiones</a></li>
           <li>
             <p>
               <a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a>
@@ -66,7 +66,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12">
                 <div class="text-center">
-                    <h1>Diseño</h1>
+                    <h1>Diseño de Bumblebom</h1>
                 </div>
                 <div>
                   <img class="img-responsive" src="./assets/images/maqueta.jpg" alt="First slide">
