--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url('./assets/images/img-home.jpg')">
+<div class="white-text-container background-image-container" style="background-image: url('./assets/images/img-home2.jpg')">
     <div class="opacity"></div>
     <div class="container">
         <div class="row">
