--- a/pricing.html
+++ b/pricing.html
@@ -66,7 +66,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12">
                 <div class="text-center">
-                    <h1>Diseño de Bumblebom</h1>
+                    <h1>Diseño del Bumblebom Alarm</h1>
                 </div>
                 <div>
                   <img class="img-responsive" src="./assets/images/maqueta.jpg" alt="First slide">
